k8s/apps/fastapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    cert-manager.io/cluster-issuer: local-root-ca
    cert-manager.io/duration: 168h
    cert-manager.io/renew-before: 24h
    #nginx.ingress.kubernetes.io/auth-url: "https://auth.local/oauth2/auth"
    #nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.oauth2-proxy.svc.cluster.local:4180/oauth2/auth"
    #nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.app.test/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.app.test/oauth2/start?rd=$scheme://$host$request_uri"
    #nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-response-headers: "Authorization,X-Auth-Request-User,X-Auth-Request-Email,X-Auth-Request-Access-Token"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - fastapi.app.test
    secretName: fastapi-tls
  rules:
  - host: fastapi.app.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 80
